--- a/translation/translations.en.yaml
+++ b/translation/translations.en.yaml
@@ -9,7 +9,7 @@ LABEL_PAINTINGS: "🖼️ Paintings"
 LABEL_ARTICLES: "📝 Articles"
 LABEL_CONTACTS: "📬 Contacts"
 LABEL_BACK: "🔙 Back"
-LABEL_QUIZ: "🎨 Art Style Quiz"
+LABEL_QUIZ: "🎨 Quiz: The Color That Leads You"
 SERVICES_TEXT: |
   I’m happy to see you here — welcome to a cozy space of creativity and color 🎨✨
 
