--- a/translation/translations.ru.yaml
+++ b/translation/translations.ru.yaml
@@ -9,7 +9,7 @@ LABEL_PAINTINGS: "🖼️ Картины"
 LABEL_ARTICLES: "📝 Статьи"
 LABEL_CONTACTS: "📬 Контакты"
 LABEL_BACK: "🔙 Назад"
-LABEL_QUIZ: "🎨 Викторина: стиль искусства"
+LABEL_QUIZ: "🎨 Квиз: Цвет, который ведет тебя"
 SERVICES_TEXT: |
   Рада видеть тебя здесь — добро пожаловать в пространство творчества и цвета 🎨✨
 
