--- a/translation/translations.ru.yaml
+++ b/translation/translations.ru.yaml
@@ -1,3 +1,4 @@
+# Business Entities
 ABOUT_TEXT: |
   Привет и добро пожаловать! 🧡
 
@@ -6,6 +7,12 @@ ABOUT_TEXT: |
   Этот бот — ваш мини‑творческий кабинет: смотрите, читайте, изучайте, а если есть желание приобрести мои продукты - пишите в личные сообщения. 
 
   Давайте узнаем, что вам говорит цвет! 🎨💬
+INFO_TEXT: |
+  Я — Ксения ALF, художница, арт-терапевт и преподаватель. Мой путь в искусстве — это путь к себе, к чувствам и к свободе самовыражения. 
+  
+  В этом разделе вы можете узнать обо мне подробнее и скачать моё портфолио (PDF).
+  
+  Если хотите узнать больше — пишите в личные сообщения!
 SERVICES_TEXT: |
   Рада видеть тебя здесь — добро пожаловать в пространство творчества и цвета 🎨✨
 
@@ -50,30 +57,160 @@ GUIDE_TEXT: |
   Предлагаю такой алгоритм:
   Проходите квиз по ссылке ➡️ запоминаете ваш результат/цвет ➡️ скачиваете гайд по психологии цвета ➡️ находите свой цвет ➡️ читаете всю информацию, вычленяя главное ➡️ применяете полученные знания на практике и ➡️ браво! вы - прекрасны.
 ARTICLES_MENU_GREETING: "Выберите статью или пройдите викторину — давайте откроем ваши цвета! 🎨✨"
+REVIEWS_TEXT: |
+  Здесь вы можете посмотреть отзывы о моей работе на Profi.ru. Спасибо всем, кто делится впечатлениями!
+MINI_SHOP_TEXT: |
+  Добро пожаловать в мини-магазин Ksusha! Здесь вы найдете уникальные мини-продукты, созданные с любовью и вдохновением.
+
+  Ниже представлены примеры мини-продуктов:
+INSPIRATION_INTRO: |
+  🧡 Твоё случайное вдохновение на сегодня:
+
+INSPIRATION_OUTRO: |
+  Позволь этому цвету немного войти в твою реальность: через образ, настроение или маленький рисунок.
+  Не забудь про задание на сегодня! 
+  Целую!😘
+CERTIFICATE_TEXT: "Используйте и радуйтесь! ✨"
+
+INSPIRATION_TEXT: |
+  ГДЕ ЧЕРПАТЬ ВДОХНОВЕНИЕ?
+
+  В жизни любого творца, креатора, художника (подставь свое...) наступает такой момент, когда кажется, что идти дальше некуда.
+  Вдохновение иссякло, идей нет, и наступает творческий кризис.
+  Поэтому для меня было важно найти такие источники вдохновения, создатели которых смогут удивить вас своим видением, но самое главное — вернуть то яркое желание творить и делиться с миром новыми идеями.
+
+  Переходи скорее по ссылке, чтобы ознакомиться с файлом!
+
+
 HELP_TEXT: |
-  Привет! 👋 Я ваш дружелюбный арт‑ассистент.
+  Привет! 👋 Я ваш дружелюбный арт-ассистент.
 
-  Полезные команды:
+  Вот команды, которые доступны в боте:
   - /start — открыть главное меню
-  - /paintings — посмотреть работы
-  - /services — услуги и цены
-  - /articles — короткие гайды и упражнения
-  - /contacts — контакты художницы
+  - /help — справка по командам
+  - /portfolio — портфолио
+  - /services — услуги
+  - /products — бесплатные продукты
+  - /contacts — контакты
+  - /reviews — отзывы
+  - /minishop — мини-магазин
+  - /info — обо мне
+  - /certificate — сертификат
+  - /inspiration — вдохновение
+  - /statistics — статистика
 
-  Попробуйте викторину по стилю или откройте Гайд для быстрого творческого задания! 🎨
+  Для навигации используйте кнопки меню или команды выше. Если возникнут вопросы — пишите!
+
+LABEL_INFO: "🧑‍🎨 Обо мне"
+LABEL_STATISTICS: "📊 Статистика"
 LABEL_SERVICES: "🧡 Услуги"
 LABEL_PAINTINGS: "🖼️ Портфолио"
 LABEL_ARTICLES: "📝 Бесплатные продукты"
 LABEL_CONTACTS: "📬 Контакты"
-LABEL_BACK: "🔙 Назад"
+LABEL_REVIEWS: "⭐️ Отзывы"
+LABEL_MINI_SHOP: "🛍️ Мини-магазин"
+LABEL_CERTIFICATE: "🎁 Сертификат"
+LABEL_REVIEWS_LINK: "Открыть отзывы на Profi.ru"
 LABEL_QUIZ: "🎨 Квиз: Цвет, который ведет тебя"
-LABEL_GUIDE: "Гайд"
-LABEL_MAIN_MENU: "Главное меню"
+LABEL_GUIDE: "Гайд по психологии цвета"
+LABEL_ARTIST_DAY: "Youtube: День художницы"
+LABEL_INSPIRATION: "Где черпать вдохновение?"
+LABEL_INSPIRATION_LINK: "Перейти к файлу"
+LABEL_INSPIRATION_GENERATOR: "✨ Вдохновение на сегодня"
+LABEL_INSPIRATION_NEW: "🔄 Сгенерировать новое"
 CONTACTS_BTN_TELEGRAM: "Telegram"
 CONTACTS_BTN_CHANNEL: "Канал в Telegram"
 CONTACTS_BTN_INSTAGRAM: "Instagram"
 CONTACTS_BTN_BEHANCE: "Behance"
 CONTACTS_BTN_EMAIL: "Email"
+
+# Navigation & System
+LABEL_BACK: "🔙 Назад"
+LABEL_MAIN_MENU: "Главное меню"
 UNKNOWN_COMMAND: "Извините, я не понимаю:("
 LANG_EN: "English 🇬🇧"
 LANG_RU: "Русский 🇷🇺"
+
+# Inspiration Cards
+INSPIRATION_CARDS:
+  - color: "Глубокий красный"
+    quote: "«Если чувствуешь огонь — позволь ему освещать, а не сжигать.»"
+    exercise: "Нарисуй сегодня свой внутренний огонь только линиями и пятнами. Не думай о форме - позволь руке двигаться в такт своим чувствам."
+  - color: "Алый красный"
+    quote: "«Страсть - это огонь, который не просит позволения гореть.»"
+    exercise: "Выбери один маленький поступок, который давно откладываешь, и сделай его. После этого зарисуй момент, когда почувствуешь облегчение или радость."
+  - color: "Рубиновый красный"
+    quote: "«Смелость начинается там, где заканчиваются привычные ответы.»"
+    exercise: "Нарисуй символ своей смелости. Это может быть знак, предмет или абстрактная форма. Введи в рисунок красный как акцент."
+  - color: "Тёплый оранжевый"
+    quote: "«Ты не обязана всё делать серьёзно, чтобы это было важно.»"
+    exercise: "Нарисуй сегодня любую мелочь из своего дома, как будто она персонаж сказки. Добавь ей настроение, характер и оранжевые акценты."
+  - color: "Персиковый оранжевый"
+    quote: "«Радость часто живёт в самых простых моментах.»"
+    exercise: "Вспомни три маленькие вещи, которые сегодня сделали тебе приятно. Зарисуй их в виде трёх пятен или мини-иллюстраций."
+  - color: "Янтарный оранжевый"
+    quote: "«Твоё тепло -  ресурс, а не слабость.»"
+    exercise: "Нарисуй место, где тебе по-настоящему уютно. Добавь в него тёплые оттенки - как будто ты заливаешь это пространство мягким светом."
+  - color: "Мягкий жёлтый"
+    quote: "«Ясность начинается с простого вопроса к себе: „Как я себя чувствую на самом деле?»"
+    exercise: "Напиши одно предложение о том, чего ты сейчас хочешь. Затем преврати это предложение в абстрактный рисунок жёлтых линий и форм."
+  - color: "Лимонный жёлтый"
+    quote: "«Твои мысли заслуживают того, чтобы их услышали - хотя бы ты сама.»"
+    exercise: "Возьми лист и сделай «мыслительный набросок» - записывай и зарисовывай всё, что приходит в голову 3 минуты подряд, не останавливаясь."
+  - color: "Золотисто-жёлтый"
+    quote: "«То, что действительно ценно, часто ближе, чем кажется — нужно лишь остановиться и почувствовать этот момент.»"
+    exercise: "Нарисуй сегодня что-то, за что ты благодарна. Не обязательно буквально - это может быть символ или метафора."
+  - color: "Изумрудный зелёный"
+    quote: "«Рост не всегда заметен, но он всегда происходит.»"
+    exercise: "Нарисуй росток, дерево или любую форму, которая для тебя символизирует рост. Добавь оттенки зелёного, которые тебе нравятся."
+  - color: "Мягкий мятный зелёный"
+    quote: "«Твоя свобода растёт вместе с тобой: сегодня ты можешь дышать глубже, чем позволяла себе вчера.»"
+    exercise: "Сделай несколько глубоких вдохов, а потом зарисуй воздух - так, как ты его ощущаешь, линиями, пятнами, волнами."
+  - color: "Оливковый зелёный"
+    quote: "«Покой — это тоже действие, только обращенное внутрь.»"
+    exercise: "Нарисуй место, где ты можешь отдыхать внутри себя. Это может быть реальный уголок или фантазийный сад."
+  - color: "Глубокий синий"
+    quote: "«Ответы приходят в тишине, а не в спешке.»"
+    exercise: "Выдели 3–5 минут тишины. Потом зарисуй одну мысль или образ, который пришёл в эту паузу, используя синие оттенки."
+  - color: "Индиго"
+    quote: "«Твоя глубина - пространство силы, света и настоящей ценности.»"
+    exercise: "Нарисуй символ своей глубины: это может быть океан, глаз, окно, тоннель - всё, что откликается."
+  - color: "Небесный синий"
+    quote: "«Когда ты позволяешь себе быть честной, воздух вокруг становится легче.»"
+    exercise: "Напиши одно честное признание самой себе, а потом обрами его мягким синим фоном или узором."
+  - color: "Лавандовый фиолетовый"
+    quote: "«Воображение - это место, где мир становится таким, каким ты смело разрешаешь ему быть.»"
+    exercise: "Нарисуй сегодня что-то нереальное: объект, который не может существовать в реальности, но живёт в твоей голове."
+  - color: "Глубокий фиолетовый"
+    quote: "«Переходы - не потеря, а трансформация.»"
+    exercise: "Выбери одну тему, которую ты сейчас проживаешь как переход. Нарисуй её в виде моста, портала или двери."
+  - color: "Аметистовый фиолетовый"
+    quote: "«Непревзойдённость — в несовершенстве, безумие — в гениальности, и гораздо лучше быть восхитительно нелепой, чем безнадёжно скучной. Мэрилин Монро»"
+    exercise: "Нарисуй узор из повторяющихся форм, которые ассоциируются у тебя с твоей уникальностью. Добавь в них фиолетовые акценты."
+  - color: "Тёплый коричневый"
+    quote: "«Дом - это не место, это ощущение.»"
+    exercise: "Нарисуй  свой «дом» - не обязательно стены, скорее ощущение опоры. Используй тёплые землистые оттенки."
+  - color: "Кофейный коричневый"
+    quote: "«Твои маленькие ритуалы поддерживают тебя сильнее, чем ты думаешь.»"
+    exercise: "Придумай и нарисуй свой дневной ритуал в виде комикса из 3–4 кадров. Можешь рисовать образно или схематично, главное передать настроение."
+  - color: "Ореховый коричневый"
+    quote: "«То, что было позади нас, и то, что ждёт впереди, — мелочи по сравнению с тем, что живёт внутри нас.»"
+    exercise: "Нарисуй предмет/ образ/ ощущение, который до сих пор даёт тебе опору. Даже если его нет физически - изобрази его таким, каким чувствуешь."
+  - color: "Мягкий белый"
+    quote: "«Иногда лучшее действие - убрать лишнее.»"
+    exercise: "Выбери один уголок в комнате и упростить его: мысленно или на бумаге. Нарисуй это пространство до и после очищения."
+  - color: "Холодный белый"
+    quote: "«Пауза - это тоже часть движения.»"
+    exercise: "Нарисуй пустое пространство и добавь в него только один объект, который сейчас для тебя важен. Заметь, сколько воздуха вокруг него."
+  - color: "Сливочный белый"
+    quote: "«Ты имеешь право делать всё проще, чем привыкла.»"
+    exercise: "Попробуй нарисовать сегодня что-то одним-двумя цветами, без лишних деталей. Дай себе попробовать «минимализм» в рисунке."
+  - color: "Глубокий чёрный"
+    quote: "«Твоя тень - часть твоей силы.»"
+    exercise: "Нарисуй свою тень (теневую сторону) как персонажа. Как он выглядит? Какую позу принимает? Какие линии к нему тянутся?"
+  - color: "Глянцевый чёрный"
+    quote: "«Когда ты смотришь внутрь, мир снаружи начинает меняться.»"
+    exercise: "Нарисуй отражение своего внутреннего мира будто смотришь в воду: какая ты есть сейчас, которую видят все, а какая ты в отражении глубины."
+  - color: "Графитовый чёрный"
+    quote: "«У тебя всегда есть право начать с черновика.»"
+    exercise: "Сделай «грязный» набросок чего угодно, не стараясь. Просто позволь руке двигаться. Потом посмотри, что в нём тебе нравится."
