--- a/translation/translations.ru.yaml
+++ b/translation/translations.ru.yaml
@@ -10,59 +10,57 @@ ABOUT_TEXT: |
 INFO_TEXT: |
   Я - Ксения ALF, художница, арт-терапевт и преподаватель. Мой путь в искусстве - это путь к себе, к чувствам и к свободе самовыражения. 
   
-  В этом разделе вы можете узнать обо мне подробнее и скачать моё портфолио (PDF).
+  В этом разделе вы можете узнать подробнее обо мне и скачать портфолио (PDF).
   
   Если хотите узнать больше - пишите в личные сообщения!
 SERVICES_TEXT: |
-  Рада видеть тебя здесь - добро пожаловать в пространство творчества и цвета 🎨✨
+  Рада видеть тебя здесь! Добро пожаловать в пространство творчества и цвета 🎨✨
 
   Вот как мы можем поработать вместе:
 
-  🧡 Онлайн арт-терапия - 35€/час
-
-  Мягко и бережно разберём твой запрос, используем МАК-карты, нарисуем точку «А» и создадим точку «Б» - с чётким и вдохновляющим путём, как к ней прийти.
-
-  🎨 Онлайн рисование - 35€/час
+  🎨 Онлайн рисование - 20€/час
 
   Просто наслаждайся цветом и процессом или учись чему-то конкретному! Подготовка к художественной школе, освоение техник или рисование «для души».
 
-  🍊 Оффлайн-встречи любого формата - 40€/час
+  🧡 Онлайн арт-терапия - 30€/час
 
-  Индивидуальный мастер-класс, арт-терапия, создание личного творческого пути, помощь в подготовке к конкурсам или поступлению.
-  Живое общение, вдохновение и много красок!
+  Мягко и бережно разберём твой запрос, а далее, используя МАК-карты и психологию цвета, нарисуем точку «А» и создадим точку «Б» - с вдохновляющим путём, как к ней прийти.
 
-  Готов начать? Напиши мне @kseniialf
+  🍊 Живые встречи индивидуально любого формата - 30€/час
+  
+  Здесь возможно все - создание личного творческого пути, консультация, помощь в подготовке к конкурсам или поступлению!
+
+  🍊 Живые встречи групповые любого формата - 20€/час с человека
+
+  Мастер-класс, девичник, день рождения, тим-билдинг - внедрим арт в любое мероприятие на ваш вкус. Гарантирую вдохновение и много красок!
+
+  Напиши мне, чтобы обсудить условия и забронировать день @kseniialf
 PAINTINGS_TEXT: |
   Мои работы - о мягкости, женственности и эмоциональном тепле. Каждое полотно создаётся с вниманием к чувству. 💗
 
   Я предлагаю:
   • Визуализацию картины в вашем интерьере 🏡
-  • Заказное произведение, созданное специально для вас ✨
+  • Картину под заказ, созданное специально для вас ✨
   • Сотрудничество с дизайнерами и галереями 🌸
 
   Доставка по всему миру 🌍, возможна рассрочка. Для заказов и сотрудничества - пишите @kseniialf 💌
-CONTACTS_TEXT: "Всегда рада общению - нажмите любую кнопку ниже, чтобы связаться. Давайте создадим что-то прекрасное вместе! 🤍"
+CONTACTS_TEXT: "Всегда рада общению и коллаборациям - нажмите любую кнопку ниже, чтобы связаться. Давайте создадим что-то прекрасное вместе! 🤍"
 GUIDE_GREET: |
   Привеееет, прекрасные! ❤️
 
-  Рада, что вы интересуетесь цветом и собой. Гайд - это мягкий путь к само‑познанию через простые практики и вопросы.
+  Рада, что вы интересуетесь цветом и своим внутренним миром. Гайд - это мягкий путь к самопознанию через простые практики и вопросы.
 GUIDE_TEXT: |
   Чтобы стать ближе к себе -  я вам предоставлю еще один инструмент - ГАЙД ПО ПСИХОЛОГИИ ЦВЕТА
 
   В файле вы найдете:
-  - информацию, зачем вообще нам цвет и как это применимо в жизни
+  - информацию, зачем вообще нам цвет, и как он применим в реальной жизни
   - краткую сводку о каждом цвете
   - а также подробную информацию по отдельности на каждый цвет
-
-  Предлагаю такой алгоритм:
-  Проходите квиз по ссылке ➡️ запоминаете ваш результат/цвет ➡️ скачиваете гайд по психологии цвета ➡️ находите свой цвет ➡️ читаете всю информацию, вычленяя главное ➡️ применяете полученные знания на практике и ➡️ браво! вы - прекрасны.
 ARTICLES_MENU_GREETING: "Выберите статью или пройдите викторину - давайте откроем ваши цвета! 🎨✨"
 REVIEWS_TEXT: |
   Здесь вы можете посмотреть отзывы о моей работе на Profi.ru. Спасибо всем, кто делится впечатлениями!
 MINI_SHOP_TEXT: |
-  Добро пожаловать в мини-магазин Ksusha! Здесь вы найдете уникальные мини-продукты, созданные с любовью и вдохновением.
-
-  Ниже представлены примеры мини-продуктов:
+  Добро пожаловать в магазин! Здесь вы найдете уникальные продукты, созданные с любовью и вдохновением.
 INSPIRATION_INTRO: |
   🧡 Твоё случайное вдохновение на сегодня:
 
@@ -70,7 +68,7 @@ INSPIRATION_OUTRO: |
   Позволь этому цвету немного войти в твою реальность: через образ, настроение или маленький рисунок.
   Не забудь про задание на сегодня! 
   Целую!😘
-CERTIFICATE_TEXT: "Используйте и радуйтесь! ✨"
+CERTIFICATE_TEXT: "Для оформления сертификата напишите мне в личные сообщения @kseniialf ✨"
 
 SUPPORT_TEXT: |
   Если вам нравится мое творчество и вы хотите поддержать меня, буду безмерно благодарна! 🧡
@@ -114,14 +112,14 @@ LABEL_ARTICLES: "📝 Бесплатные продукты"
 LABEL_CONTACTS: "📬 Контакты"
 LABEL_REVIEWS: "⭐️ Отзывы"
 LABEL_MINI_SHOP: "🛍️ Мини-магазин"
-LABEL_CERTIFICATE: "🎁 Сертификат"
+LABEL_CERTIFICATE: "🎁 Подарочный сертификат"
 LABEL_REVIEWS_LINK: "Открыть отзывы на Profi.ru"
 LABEL_QUIZ: "🎨 Квиз: Цвет, который ведет тебя"
 LABEL_GUIDE: "Гайд по психологии цвета"
 LABEL_ARTIST_DAY: "Youtube: День художницы"
 LABEL_INSPIRATION: "Где черпать вдохновение?"
 LABEL_INSPIRATION_LINK: "Перейти к файлу"
-LABEL_INSPIRATION_GENERATOR: "✨ Вдохновение на сегодня"
+LABEL_INSPIRATION_GENERATOR: "✨ Арт-импульс"
 LABEL_INSPIRATION_NEW: "🔄 Сгенерировать новое"
 LABEL_SUPPORT: "💵 Поддержать"
 LABEL_SUPPORT_PAY: "💳 Поддержать через Stripe"
@@ -129,6 +127,7 @@ CONTACTS_BTN_TELEGRAM: "Telegram"
 CONTACTS_BTN_CHANNEL: "Канал в Telegram"
 CONTACTS_BTN_INSTAGRAM: "Instagram"
 CONTACTS_BTN_BEHANCE: "Behance"
+CONTACTS_BTN_EMAIL: "Email"
 CONTACTS_BTN_WEBSITE: "Сайт"
 
 # Navigation & System
